# roq-kucoin-pro

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore
conda/: meta.yaml
share/: config.toml
share/flags/colo1/: flags.cfg
share/flags/colo2/: flags.cfg
share/flags/colo3/: flags.cfg
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
src/roq/kucoin_futures/: .gitignore  CMakeLists.txt  TODO  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  collector.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  drop_copy_state.json  gateway.cpp  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_state.json  order_entry_ws.cpp  order_entry_ws.hpp  private_token.hpp  rest.cpp  rest.hpp  rest_state.json  settings.cpp  settings.hpp  shared.cpp  shared.hpp
src/roq/kucoin_futures/flags/: .gitignore  CMakeLists.txt  flags.json  mbp.json  misc.json  request.json  rest.json  ws.json
src/roq/kucoin_futures/json/: .gitignore  CMakeLists.txt  account_ack.json  account_ack_data.json  ack.json  add_order_ack.json  add_order_ack_data.json  available_balance_change.json  available_balance_change_data.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_order_ack.json  cancel_order_ack_data.json  contracts_ack.json  contracts_ack_data_item.json  display_type.json  encoder.cpp  encoder.hpp  error.json  execution.json  execution_data.json  fair_method.json  fee_type.json  fills_ack.json  fills_ack_data_item.json  funding_begin.json  funding_begin_data.json  funding_end.json  funding_end_data.json  funding_rate.json  funding_rate_data.json  instance_server.json  level2.json  level2_data.json  level2_data_item.json  liquidity.json  map.cpp  map.hpp  margin_mode.json  mark_index_price.json  (+67 more)
src/roq/kucoin_futures/tools/: crypto.cpp  crypto.hpp  splitter.cpp  splitter.hpp
src/roq/kucoin_pro/: .gitignore  CMakeLists.txt  README  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  collector.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  drop_copy_state.hpp  drop_copy_state.json  gateway.cpp  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_state.hpp  order_entry_state.json  order_entry_ws.cpp  order_entry_ws.hpp  private_token.hpp  request.hpp  rest.cpp  rest.hpp  rest_state.hpp  rest_state.json  sandbox.sh  settings.cpp  settings.hpp  shared.cpp  (+2 more)
src/roq/kucoin_pro/fix_bridge/: .gitignore  application.cpp  application.hpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/kucoin_pro/flags/: .gitignore  CMakeLists.txt  flags.json  mbp.json  misc.json  request.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/kucoin_pro/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_ws.cpp  order_entry_ws.hpp  private_token.hpp  request.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/kucoin_pro/json/: .gitignore  CMakeLists.txt  account_ack.json  account_ack_data.json  account_ack_data_accounts_item.json  account_ack_data_accounts_item_currencies_item.json  account_type.json  ack.json  add_order_ack.json  add_order_ack_data.json  available_balance_change.json  available_balance_change_data.json  balance.json  balance_data.json  business_type.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_order_ack.json  cancel_order_ack_data.json  channel.json  contracts_ack.json  contracts_ack_data_item.json  currencies_ack.json  currencies_ack_data_item.json  currencies_ack_data_item_items_item.json  currency_ack.json  currency_ack_data.json  currency_ack_data_list_item.json  depth.json  display_type.json  encoder.cpp  encoder.hpp  error.json  event_type.json  execution.json  execution_ack.json  execution_ack_data.json  execution_ack_data_items_item.json  execution_data.json  fair_method.json  (+109 more)
src/roq/kucoin_pro/protocol/json/: .gitignore  CMakeLists.txt  account_ack.json  account_ack_data.json  account_ack_data_accounts_item.json  account_ack_data_accounts_item_currencies_item.json  account_type.json  ack.json  add_order_ack.json  add_order_ack_data.json  balance.json  balance_data.json  business_type.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_order_ack.json  cancel_order_ack_data.json  channel.json  currencies_ack.json  currencies_ack_data_item.json  currencies_ack_data_item_items_item.json  currency_ack.json  currency_ack_data.json  currency_ack_data_list_item.json  depth.json  display_type.json  encoder.cpp  encoder.hpp  error.json  event_type.json  execution_ack.json  execution_ack_data.json  execution_ack_data_items_item.json  fee_type.json  fill_type.json  instance_server.json  instrument_ack.json  instrument_ack_data.json  instrument_ack_data_list_item.json  liquidity_role.json  (+60 more)
test/: .gitignore  CMakeLists.txt  json_account_ack.cpp  json_available_balance_change.cpp  json_balance.cpp  json_cancel_order_ack.cpp  json_contracts_ack.cpp  json_currencies_ack.cpp  json_currency_ack.cpp  json_encoder.cpp  json_execution.cpp  json_execution_ack.cpp  json_fills_ack.cpp  json_funding_begin.cpp  json_funding_end.cpp  json_funding_rate.cpp  json_instrument_ack.cpp  json_level2.cpp  json_mark_index_price.cpp  json_match.cpp  json_obu.cpp  json_order_all.cpp  json_order_book_ack.cpp  json_order_change.cpp  json_order_margin_change.cpp  json_orders_ack.cpp  json_pong.cpp  json_position_ack.cpp  json_position_adjust_risk_limit.cpp  json_position_all.cpp  json_position_change.cpp  json_position_settlement.cpp  json_positions_ack.cpp  json_snapshot24h.cpp  json_ticker.cpp  json_ticker_v2.cpp  json_token.cpp  json_trade.cpp  json_wallet_balance_change.cpp  json_welcome.cpp  (+6 more)
(+5 files in other folders)
